feat: add library view settings + alter grid spacing for consistency + strings

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -10495,6 +10495,9 @@
         }
       }
     },
+    "Default is 3 ticks." : {
+
+    },
     "Delete" : {
       "localizations" : {
         "af" : {
@@ -16197,6 +16200,9 @@
         }
       }
     },
+    "Gamecard Size" : {
+
+    },
     "Get support/Support Mythic" : {
       "localizations" : {
         "af" : {
@@ -17526,6 +17532,9 @@
           }
         }
       }
+    },
+    "Horizontal" : {
+
     },
     "I have read and agreed to the terms of the software license agreement." : {
       "localizations" : {
@@ -32183,6 +32192,9 @@
         }
       }
     },
+    "Scrolling Direction" : {
+
+    },
     "Seems like the Epic Games signin window's been closed." : {
 
     },
@@ -40555,6 +40567,9 @@
           }
         }
       }
+    },
+    "Vertical" : {
+
     },
     "View" : {
       "localizations" : {
