--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -6313,6 +6313,9 @@
         }
       }
     },
+    "Asynchronous DXVK" : {
+
+    },
     "Automatically check for Mythic Engine updates" : {
       "localizations" : {
         "af" : {
@@ -11454,6 +11457,12 @@
           }
         }
       }
+    },
+    "DXVK" : {
+
+    },
+    "DXVK cannot be modified: %@" : {
+
     },
     "Engine" : {
 
@@ -26894,6 +26903,9 @@
         }
       }
     },
+    "Quit games running in this container?" : {
+
+    },
     "Remove" : {
       "localizations" : {
         "af" : {
@@ -35266,6 +35278,9 @@
           }
         }
       }
+    },
+    "To toggle DXVK, Mythic must quit all games currently running in this container.\nAdditionally, D3DMetal will be disabled.\n\nToggling DXVK may impact compatibility positively or negatively." : {
+
     },
     "Unable to locate %@ at its specified path (%@)" : {
       "localizations" : {
