feat: complete settings overhaul + todo: fix swiftui bug messing with settings layout

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -14905,6 +14905,9 @@
     "Gamecard Size" : {
 
     },
+    "General" : {
+
+    },
     "Get support/Support Mythic" : {
       "localizations" : {
         "af" : {
