--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -14160,6 +14160,9 @@
     "Force Quit Running Windows® Applications" : {
 
     },
+    "Force-refresh game list" : {
+
+    },
     "Game Location:" : {
       "localizations" : {
         "af" : {
