--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -7667,6 +7667,9 @@
         }
       }
     },
+    "Choose the game's install location:" : {
+
+    },
     "Choose the game's native platform:" : {
       "localizations" : {
         "af" : {
@@ -11485,6 +11488,9 @@
         }
       }
     },
+    "Enter a thumbnail URL: (optional)" : {
+
+    },
     "Enter authorisation key..." : {
       "localizations" : {
         "af" : {
@@ -11869,6 +11875,7 @@
 
     },
     "Enter Thumbnail URL here... (optional)" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -25038,6 +25045,9 @@
         }
       }
     },
+    "Otherwise, browse for a thumbnail file: " : {
+
+    },
     "Performance HUD" : {
       "localizations" : {
         "af" : {
@@ -34761,6 +34771,9 @@
       }
     },
     "To toggle DXVK, Mythic must quit all games currently running in this container.\nAdditionally, D3DMetal will be disabled.\n\nToggling DXVK may impact compatibility positively or negatively." : {
+
+    },
+    "Unable to import thumbnail." : {
 
     },
     "Unable to locate %@ at its specified path (%@)" : {
