--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -11713,6 +11713,7 @@
       }
     },
     "Enter New Thumbnail URL here..." : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -34812,6 +34813,9 @@
       }
     },
     "To toggle DXVK, Mythic must quit all games currently running in this container.\nAdditionally, D3DMetal will be disabled.\n\nToggling DXVK may impact compatibility positively or negatively." : {
+
+    },
+    "To use the default image, leave the field empty." : {
 
     },
     "Unable to import thumbnail." : {
